--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,7 @@
 \input{section_research_interests}
 \input{section_courses}
 \input{section_languages}
-\input{section_interests}
+\input{section_hobbies}
 
 \noindent \\
 (last update: \today)
