--- a/section_hobbies.tex
+++ b/section_hobbies.tex
@@ -1,4 +1,4 @@
-\sectionTitle{Interests}{\faLightbulbO}
+\sectionTitle{Hobbies}{\faLightbulbO}
 
 \begin{tabular}{rl}
     \textsc{Sports:} & Climbing, Kyokushin,  Swimming \\
