--- a/section_research_interests.tex
+++ b/section_research_interests.tex
@@ -3,6 +3,7 @@
 	\item Digital signal processing
 	\item Artificial intelligence
 	\item High performance computing
+	\item Software defined radio
 	\item Digital video broadcasting
 	\item Image processing
 	      \\
