--- a/cv.tex
+++ b/cv.tex
@@ -14,7 +14,7 @@
 
 \name{Hossein}{Beheshti}
 
-\tagline{Digital Signal Processing Engineer / FPGA developer}
+\tagline{FPGA Design Engineer}
 \photo{2.5cm}{avatar}
 \socialinfo{
 	\github{HosseinBeheshti}
