--- a/cv_no_photo.tex
+++ b/cv_no_photo.tex
@@ -14,7 +14,7 @@
 
 \name{Hossein}{Beheshti}
 
-\tagline{Digital Signal Processing Engineer / FPGA developer}
+\tagline{FPGA Design Engineer}
 \socialinfo{
 	\github{HosseinBeheshti}
 	\linkedin{hosseinbeheshti} \\
