--- a/awesome-source-cv.cls
+++ b/awesome-source-cv.cls
@@ -48,7 +48,7 @@
 
 % Dependences
 %A Few Useful Packages
-\RequirePackage[frenchb]{babel}
+\RequirePackage[english]{babel}
 \RequirePackage[utf8]{luainputenc}
 \RequirePackage{fontspec} 					                 % for loading fonts
 \RequirePackage{url,parskip} 	    % other packages for formatting
