--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -5,10 +5,10 @@
   \experience
   {Present} {FPGA developer}{Samim group}{Tehran,Iran}
   {Aug 2018} {
-    Design and implement Up/Down/Cross converter
+    As product owner (PO), led digital systems team in research and development of an \\
+    SD/HD/3G/6G/12G serial digital interface (SDI) up/down/cross converter with audio \\
+    embedder and de-embedder
     \begin{itemize}
-      \item Implementation of 3G/HD/SD cross convert with frame synchronization
-      \item Implementation of audio embedder and de-embedder
       \item Implementation of 16 channel Audio processing (gain,delayer)
       \item Implementation of 16 channel Audio  monitoring (silence and overload)
       \item Implementation of advance HDR processing (Ongoing project)
