--- a/section_headline.tex
+++ b/section_headline.tex
@@ -1,7 +1,9 @@
 \par{
-    Design and implement the digital signal processing algorithms on FPGA/ZynqMP.
+    FPGA design and signal processing engineer with 7+ years of experience in 
+    communication and broadcast industry. Design and implement the 
+    digital signal processing algorithms on FPGA/ZynqMP.
     Skilled in Algorithms, Simulink, Statistical Signal Processing, and Embedded Systems.
-    Strong engineering professional with a Master’s Degree focused in Telecommunications
-    Engineering from Iran University of Science and Technology.
+	Able to deeply analyze and pinpoint system integration bugs. Passionate about learning
+	new technologies and motivated by tackling challenges.
     \\
 }
