--- a/section_headline.tex
+++ b/section_headline.tex
@@ -1,9 +1,8 @@
 \par{
-    FPGA design and signal processing engineer with 7+ years of experience in 
-    communication and broadcast industry. Design and implement the 
-    digital signal processing algorithms on FPGA/ZynqMP.
+    FPGA design and signal processing engineer with 7+ years of experience in the communication 
+    and broadcast industry. Design and implement the digital signal processing algorithms on FPGA/ZynqMP.
     Skilled in Algorithms, Simulink, Statistical Signal Processing, and Embedded Systems.
-	Able to deeply analyze and pinpoint system integration bugs. Passionate about learning
-	new technologies and motivated by tackling challenges.
+    Able to deeply analyze and pinpoint system integration bugs. Passionate about learning 
+    new technologies and motivated by tackling challenges.
     \\
 }
