Resolve "remove paper"

--- a/section_research_experiences.tex
+++ b/section_research_experiences.tex
@@ -1,3 +1,4 @@
+
 \sectionTitle{Research Experiences}{\faLeanpub}
 
 \begin{itemize}
@@ -22,7 +23,7 @@
 
 	\item{
 	      \textbf{Hossein Beheshti}, Sajad Daei, Farzan Haddadi, ``Adaptive Recovery of Dictionary-sparse Signals using Binary Measurements'',
-	      submitted to \emph{Signal Processing -- Elsevier}
+	      submitted to \emph{EURASIP Journal on Advances in Signal Processing -- Springer}
 	      }
 	      \\
 \end{itemize}
