--- a/section_education.tex
+++ b/section_education.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{cl}
 	\includegraphics[scale=0.12]{graphics/IUST_logo_color} &
 	\begin{tabular}{rl}
-		\textsc{2015 --2018} & \textbf{Master’s Degree},  \emph{Iran University of Science \& Technologye} (IUST),  Tehran, Iran            \\
+		\textsc{2015 --2018} & \textbf{Master’s Degree},  \emph{Iran University of Science \& Technology} (IUST),  Tehran, Iran            \\
 		                     & \textbf{Telecommunications Engineering}                                                                      \\
 		                     & \emph{Supervisor:\link{http://www.iust.ac.ir/content/45110/Dr.-Haddadi}{Assistant Professor Farzan Haddadi}} \\
 		                     & \textsc{GPA}: 15.09/20                                                                                       \\
