prepare cover letter template

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -15,7 +15,6 @@
 \name{Hossein}{Beheshti}
 
 \tagline{FPGA Design Engineer}
-\photo{2.5cm}{avatar}
 \socialinfo{
 	\github{HosseinBeheshti}
 	\linkedin{hosseinbeheshti} \\
@@ -29,16 +28,14 @@
 
 \makecvheader
 
-\input{section_headline}
-\input{section_education}
-\input{section_research_experiences}
-\input{section_research_interests}
-\input{section_experiences}
-\input{section_skills}
-\input{section_courses}
-\input{section_languages}
-\input{section_hobbies}
-
+\par{
+    FPGA design and signal processing engineer with 7+ years of experience in the communication 
+    and broadcast industry. Design and implement the digital signal processing algorithms on FPGA/ZynqMP.
+    Skilled in Algorithms, Simulink, Statistical Signal Processing, and Embedded Systems.
+    Able to deeply analyze and pinpoint system integration bugs. Passionate about learning 
+    new technologies and motivated by tackling challenges.
+    \\
+}
 \noindent \\
 (last update: \today)
 \end{document}
