--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -14,7 +14,7 @@
 
 \name{Hossein}{Beheshti}
 
-\tagline{FPGA Design Engineer}
+\tagline{}
 \socialinfo{
 	\github{HosseinBeheshti}
 	\linkedin{hosseinbeheshti} \\
@@ -28,15 +28,57 @@
 
 \makecvheader
 
-\par{
-    FPGA design and signal processing engineer with 7+ years of experience in the communication 
-    and broadcast industry. Design and implement the digital signal processing algorithms on FPGA/ZynqMP.
-    Skilled in Algorithms, Simulink, Statistical Signal Processing, and Embedded Systems.
-    Able to deeply analyze and pinpoint system integration bugs. Passionate about learning 
-    new technologies and motivated by tackling challenges.
-    \\
-}
-\noindent \\
-(last update: \today)
+
+%----------------------------------------------------------------------------------------
+%	ADDRESSEE AND GREETING
+%----------------------------------------------------------------------------------------
+
+\begin{tabular}{@{} l}
+	Mrs.\ XXX           \\
+	Recruitment Officer \\
+	The Corporation     \\
+	123 Pleasant Lane   \\
+	City, State 12345
+\end{tabular}
+
+\bigskip % Vertical whitespace
+
+Dear Mrs.\ XXX,
+
+\bigskip % Vertical whitespace
+
+%----------------------------------------------------------------------------------------
+%	LETTER CONTENT
+%----------------------------------------------------------------------------------------
+
+PARAGRAPH ONE: State the reason for the letter, name the position or 
+type of work you are applying for and identify the source from which 
+you learned of the opening (i.e. career development center, newspaper, 
+employment service, personal contact).
+
+PARAGRAPH TWO: Indicate why you are interested in the position, the 
+company, its products, services - above all, stress what you can do 
+for the employer. If you are a recent graduate, explain how your 
+academic background makes you a qualified candidate for the position. 
+If you have practical work experience, point out specific achievements 
+or unique qualifications. Try not to repeat the same information the 
+reader will find in the resume. Refer the reader to the enclosed resume 
+or application which summarizes your qualifications, training, and 
+experiences. The purpose of this section is to strengthen your resume 
+by providing details which bring your experiences to life.
+
+PARAGRAPH THREE: Request a personal interview and indicate your 
+flexibility as to the time and place. Repeat your phone number in 
+the letter and offer assistance to help in a speedy response. For 
+example, state that you will be in the city where the company is 
+located on a certain date and would like to set up an interview. 
+Alternatively, state that you will call on a certain date to set 
+up an interview. End the letter by thanking the employer for 
+taking time to consider your credentials.
+
+\bigskip % Vertical whitespace
+Best regards,
+\vspace{50pt} % Vertical whitespace
+Hossein Beheshti 
 \end{document}
 
