add seperator in phone number

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -18,7 +18,7 @@
 \socialinfo{
 	\github{HosseinBeheshti}
 	\linkedin{hosseinbeheshti} \\
-	\smartphone{(+98) 9124889664}
+	\smartphone{(+98) 912-488-96-64}
 	\email{h.beheshti92@gmail.com} \\
 	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}\\
 	\infos{23 Feb 1992, Tehran, Iran}
