change class settings need to complete

--- a/CV.tex
+++ b/CV.tex
@@ -16,11 +16,11 @@
 
 \tagline{FPGA Design Engineer}
 \socialinfo{
-	\github{HosseinBeheshti}
-	\linkedin{hosseinbeheshti} \\
-	\smartphone{(+98) 912-488-96-64}
 	\email{h.beheshti92@gmail.com} \\
-	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}\\
+	\smartphone{(+98) 912 488 96 64} \\
+	\github{HosseinBeheshti} \\
+	\linkedin{hosseinbeheshti} \\
+	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}
 }
 
 \begin{document}
