--- a/CV.tex
+++ b/CV.tex
@@ -32,6 +32,7 @@
 \input{section_research_experiences}
 \input{section_research_interests}
 \input{section_experiences}
+\input{section_projects}
 \input{section_skills}
 \input{section_courses}
 \input{section_languages}
