--- a/section_research_experiences.tex
+++ b/section_research_experiences.tex
@@ -17,13 +17,13 @@
 	\item{
 	            \textbf{Bachelor Thesis}: Digital Compensation of Imbalances in Quadrature Receivers
 	            \begin{itemize}
-		            \item \textbf{Supervisor}: Assistant professor Farah Torkamani Azar
+		            \item \textbf{Supervisor}: Associate professor Farah Torkamani Azar
 	            \end{itemize}
 	      }
 	
 	\item{
 	            \textbf{Hossein Beheshti}, Sajad Daei, Farzan Haddadi, ``Adaptive Recovery of Dictionary-sparse Signals using Binary Measurements'',
-	            submitted to \emph{EURASIP Journal on Advances in Signal Processing -- Springer}
+	            \emph{EURASIP Journal on Advances in Signal Processing -- Revise}
 	      }
 	\\
 \end{itemize}
