--- a/section_skills.tex
+++ b/section_skills.tex
@@ -1,10 +1,8 @@
 \sectionTitle{Skills}{\faListUl}
 
-\renewcommand{\arraystretch}{1.1}
-
 \begin{tabular}{>{}r>{}p{13cm}}
-	\textsc{Programming Skills:}            & C/C++, MATLAB, VHDL, Qt, \LaTeX,   Git                                              \\
+	\textsc{Programming Skills:}            & C/C++, MATLAB, VHDL/verilog, Qt, \LaTeX,   Git                                      \\
 	\textsc{MATLAB:}                        & mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing \\
-	\textsc{Hardware Design Environments :} & Vitis, VIVADO, Xilinx system generator for DSP, HLS, petalinux                      \\
+	\textsc{Hardware Design Environments :} & Vitis, XILINX model composer, HLS, petalinux                                        \\
 	\textsc{Other:}                         & Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD,
 \end{tabular}
