--- a/CV2.tex
+++ b/CV2.tex
@@ -17,11 +17,11 @@
 \tagline{FPGA Design Engineer}
 \photo{2.5cm}{avatar}
 \socialinfo{
-	\github{HosseinBeheshti}
-	\linkedin{hosseinbeheshti} \\
-	\smartphone{(+98) 912-488-96-64}
 	\email{h.beheshti92@gmail.com} \\
-	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}\\
+	\smartphone{(+98) 912 488 96 64} \\
+	\github{HosseinBeheshti} \\
+	\linkedin{hosseinbeheshti} \\
+	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran} \\
 	\infos{23 Feb 1992, Tehran, Iran}
 }
 
@@ -34,6 +34,7 @@
 \input{section_research_experiences}
 \input{section_research_interests}
 \input{section_experiences}
+\input{section_projects}
 \input{section_skills}
 \input{section_courses}
 \input{section_languages}
