--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -1,4 +1,4 @@
-\sectionTitle{Projects \& Experiences}{\faCode}
+\sectionTitle{Experiences}{\faBriefcase}
 
 \begin{experiences}
 
@@ -8,13 +8,8 @@
     As product owner (PO), led digital systems team in research and development of an \\
     SD/HD/3G/6G/12G serial digital interface (SDI) up/down/cross converter with audio \\
     embedder and de-embedder
-    \begin{itemize}
-      \item Implementation of 16 channel Audio processing (gain,delayer)
-      \item Implementation of 16 channel Audio  monitoring (silence and overload)
-      \item Implementation of advance HDR processing (Ongoing project)
-    \end{itemize}
   }
-  {Broadcasting, Image Processing, MATLAB, C/C++, Vitis, VHDL, System Generator, HLS, Qt, GitLab}
+  {Broadcasting, DSP, MATLAB, C/C++, Vitis, model composer, petalinux, HLS, Qt, GitLab}
   {\includegraphics[scale=0.2]{graphics/samim_logo}}
 
   \emptySeparator
@@ -23,20 +18,8 @@
   {Jun 2018} {Research And Development Specialist}{IUST}{Tehran,Iran}
   {Mar 2015} {
     Iran University of Science and Technology
-    \begin{itemize}
-      \item \emph{Real Time Spectrum Analyzer (RTSA)}:\\
-            Real-time 3D histogram in FPGA\\
-            1k/4k bin fft variant\\
-            Programmable window coefficient\\
-            1 GSPS with 12 bit ADC
-      \item FPGA implementation of sphere decoding for wide-band MIMO systems
-      \item Welch's overlapped segment averaging spectral estimator
-      \item Radar emulator\\
-            On-demand programmable PW, PRI and antenna pattern\\
-            1.6 GSPS
-    \end{itemize}
   }
-  {Digital Signal Processing, MATLAB, C/C++, Qt, ZynqMPSoC, Vitis, VHDL, System Generator, GitLab}
+  {DSP, MATLAB, ZynqMPSoC, VIVADO, petalinux, GitLab}
   {\includegraphics[scale=0.12]{graphics/IUST_logo_color}}
 
   \emptySeparator
@@ -46,12 +29,8 @@
   {Aug 2012} {
     Institute for Research in Fundamental Sciences, Brain Engineering Research Center\\
     \emph{Design and implement digital signal processing algorithms for neuroscience signal detection}
-    \begin{itemize}
-      \item FPGA Implementation of a wave generator for deep brain emulation
-      \item FPGA Implementation of Digital Instantaneous Frequency Measurement (DIFM)
-    \end{itemize}
   }
-  {Digital Signal Processing, MATLAB, FPGA, System Generator, VIVADO, GitLab}
+  {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
   {\includegraphics[scale=0.025]{graphics/IPM_logo}}
 
   \emptySeparator
@@ -65,7 +44,7 @@
       \item Polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit
     \end{itemize}
   }
-  {Digital Signal Processing, MATLAB, FPGA}
+  {DSP, MATLAB, FPGA}
   {\includegraphics[scale=0.05]{graphics/SBU_logo}}
 
   \emptySeparator
@@ -76,7 +55,6 @@
     Shahid beheshti university Laser and Plasma Research Institute
     \begin{itemize}
       \item Design  monitoring and controlling system with AVR
-      \item Boxcar integrator
     \end{itemize}
   }
   {C, MATLAB, CodeVisionAVR}
