--- a/section_headline.tex
+++ b/section_headline.tex
@@ -1,5 +1,9 @@
+\newcounter{experience_years}
+\setcounter{experience_years}{\year}
+\addtocounter{experience_years}{-2013}
+
 \par{
-    FPGA design and signal processing engineer with 7+ years of experience in the communication
+    FPGA design and signal processing engineer with \the\value{experience_years}{\small +} years of experience in the communication
     and broadcast industry. Design and implement the digital signal processing algorithms on FPGA/ZynqMP.
     Skilled in Algorithms, Simulink, Statistical Signal Processing, and Embedded Systems.
     Able to deeply analyze and pinpoint system integration bugs. Passionate about learning
