--- a/section_hobbies.tex
+++ b/section_hobbies.tex
@@ -1,6 +1,6 @@
 \sectionTitle{Hobbies}{\faLightbulbO}
 
 \begin{tabular}{rl}
-    \textsc{Sports:} & Climbing, Kyokushin,  Swimming \\
+    \textsc{Sports:} & Climbing, Swimming \\
 \end{tabular}
 \\
