--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -5,9 +5,8 @@
   \experience
   {Present} {FPGA Design Engineer}{Samim group}{Tehran,Iran}
   {Aug 2018} {
-    As product owner (PO), lead digital systems team in research and development of an 
-    SD/HD/3G/6G/12G serial digital interface (SDI) up/down/cross converter with audio 
-    embedder and de-embedder
+    As product owner (PO), led digital systems team in research and development of an 
+    SD/HD/3G/6G/12G serial digital interface (SDI) processor
   }
   {Broadcasting, DSP, MATLAB, C/C++, Vitis, model composer, petalinux, HLS, GitLab}
   {\includegraphics[scale=0.2]{graphics/samim_logo}}
