--- a/section_projects.tex
+++ b/section_projects.tex
@@ -1,23 +1,23 @@
 \sectionTitle{Projects}{\faCode}
 
 \begin{itemize}
-	\item \textbf{Real-time spectrum analyzer}:
+	\item \textbf{Mulit image processor}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
-	\item \textbf{Up/down/cross converter}:
+	\item \textbf{Up/down/cross converter}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
-	\item \textbf{mip}:
+	\item \textbf{Real-time spectrum analyzer}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
-	\item \textbf{soft sphere}:
+	\item \textbf{Soft sphere MIMO decoder}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
-	\item \textbf{}:
+	\item \textbf{Radar emulator}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
