--- a/section_skills.tex
+++ b/section_skills.tex
@@ -1,18 +1,12 @@
 \sectionTitle{Skills}{\faListUl}
 
-\begin{tabular}{>{}r>{}p{11cm}}
-	\textsc{:}            &                                       \\
-	\textsc{:}                        & mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing \\
-	\textsc{ :} & Vitis, XILINX model composer, HLS, petalinux                                        \\
-	\textsc{:}                         & Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD,
-\end{tabular}
-
 \begin{itemize}
 	\item \textbf{Programming Skills}:
-	\\ \quad	C/C++, MATLAB, VHDL/verilog, Qt, \LaTeX,   Git
+	\\ C/C++, MATLAB, VHDL/verilog, Qt, \LaTeX,   Git
 	\item \textbf{MATLAB}:
-
+ 	\\ \quad Mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing 
 	\item \textbf{Hardware Design Environments}:
-
+ 	\\ \quad Vitis, XILINX model composer, HLS, petalinux
 	\item \textbf{Other}:
+	\\ \quad Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, docker
 \end{itemize}
