--- a/section_skills.tex
+++ b/section_skills.tex
@@ -2,11 +2,11 @@
 
 \begin{itemize}
 	\item \textbf{Programming Skills}:
-	\\ C/C++, MATLAB, VHDL/verilog, Qt, \LaTeX,   Git
+	\\ MATLAB, C/C++, VHDL, Verilog, SystemVerilog, Qt, \LaTeX,   Git
 	\item \textbf{MATLAB}:
  	\\ \quad Mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing 
 	\item \textbf{Hardware Design Environments}:
- 	\\ \quad Vitis, XILINX model composer, HLS, petalinux
+ 	\\ \quad VIVADO, Vitis, XILINX model composer, HLS, petalinux
 	\item \textbf{Other}:
 	\\ \quad Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, docker
 \end{itemize}
