to be continued ...

--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -38,10 +38,7 @@
   {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
   {May 2013} {
     Shahid Beheshti University
-    \begin{itemize}
-      \item MATLAB simulation of Adaptive filter for I/Q imbalances compensation
-      \item Polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit
-    \end{itemize}
+    \\ Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit
   }
   {DSP, MATLAB, FPGA}
   {\includegraphics[scale=0.05]{graphics/SBU_logo}}
