--- a/section_projects.tex
+++ b/section_projects.tex
@@ -17,6 +17,10 @@
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
+	\item \textbf{Adaptive digital I/Q imbalances compensator}
+	      \begin{itemize}
+		      \item aaaaaaaaaaaaaaaaaa
+	      \end{itemize}
 	\item \textbf{Radar emulator}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
