add some project

--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -5,7 +5,7 @@
   \experience
   {Present} {FPGA Design Engineer}{Samim group}{Tehran,Iran}
   {Aug 2018} {
-    As product owner (PO), led digital systems team in research and development of an 
+    As product owner (PO), led digital systems team in research and development of an
     SD/HD/3G/6G/12G serial digital interface (SDI) processor
   }
   {Broadcasting, DSP, MATLAB, C/C++, Vitis, model composer, petalinux, HLS, GitLab}
@@ -27,7 +27,7 @@
   {Feb 2015} {Research And Development Specialist}{IPM}{Tehran,Iran}
   {Aug 2012} {
     Institute for Research in Fundamental Sciences, Brain Engineering Research Center\\
-    \emph{Design and implement digital signal processing algorithms for neuroscience signal detection}
+    Design and implement digital signal processing algorithms for neuroscience signal detection
   }
   {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
   {\includegraphics[scale=0.025]{graphics/IPM_logo}}
