--- a/section_projects.tex
+++ b/section_projects.tex
@@ -1,28 +1,36 @@
 \sectionTitle{Projects}{\faCode}
 
 \begin{itemize}
-	\item \textbf{Mulit image processor}
+	\item \textbf{Real-time spectrum analyzer}
 	      \begin{itemize}
-		      \item aaaaaaaaaaaaaaaaaa
+		      \item 1 GSPS with 12 bit ADC
+		      \item Real-time 3D histogram in FPGA
+		      \item On-demand programmable window coefficient
 	      \end{itemize}
 	\item \textbf{Up/down/cross converter}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
 	      \end{itemize}
-	\item \textbf{Real-time spectrum analyzer}
+	\item \textbf{Mulit image processor}
 	      \begin{itemize}
 		      \item aaaaaaaaaaaaaaaaaa
+	      \end{itemize}
+	\item \textbf{Digital Instantaneous Frequency Measurement (DIFM)}
+	      \begin{itemize}
+		      \item 1 GSPS with 12 bit ADC
+		      \item Capture signal frequency from 0 to 500 MHz with a maximum of 0.16 MHz root-mean-squared error in less than 200 ns.
 	      \end{itemize}
 	\item \textbf{Soft sphere MIMO decoder}
 	      \begin{itemize}
-		      \item aaaaaaaaaaaaaaaaaa
+		      \item MATLAB simulation and FPGA implementation of sphere decoding for wide-band MIMO systems
 	      \end{itemize}
 	\item \textbf{Adaptive digital I/Q imbalances compensator}
 	      \begin{itemize}
-		      \item aaaaaaaaaaaaaaaaaa
+		      \item MATLAB simulation of Adaptive filter (LMS) for I/Q imbalances compensation
 	      \end{itemize}
 	\item \textbf{Radar emulator}
 	      \begin{itemize}
-		      \item aaaaaaaaaaaaaaaaaa
+		      \item 1.6 GSPS with 14 bit DAC
+		      \item On-demand programmable PW, PRI and antenna pattern
 	      \end{itemize}
 \end{itemize}
