just need to complete IUST

--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -16,7 +16,8 @@
   \experience
   {Jun 2018} {Research And Development Specialist}{IUST}{Tehran,Iran}
   {Mar 2015} {
-    Iran University of Science and Technology
+    \emph{Iran University of Science and Technology}
+    \\ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   }
   {DSP, MATLAB, ZynqMPSoC, VIVADO, petalinux, GitLab}
   {\includegraphics[scale=0.12]{graphics/IUST_logo_color}}
@@ -26,7 +27,7 @@
   \experience
   {Feb 2015} {Research And Development Specialist}{IPM}{Tehran,Iran}
   {Aug 2012} {
-    Institute for Research in Fundamental Sciences, Brain Engineering Research Center\\
+    \emph{Institute for Research in Fundamental Sciences, Brain Engineering Research Center}\\
     Design and implement digital signal processing algorithms for neuroscience signal detection
   }
   {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
@@ -37,7 +38,7 @@
   \experience
   {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
   {May 2013} {
-    Shahid Beheshti University
+    \emph{Shahid Beheshti University}
     \\ Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit
   }
   {DSP, MATLAB, FPGA}
@@ -48,10 +49,8 @@
   \experience
   {Aug 2012} {Research And Development Assistant}{LPRI}{Tehran,Iran}
   {Jan 2010} {
-    Shahid beheshti university Laser and Plasma Research Institute
-    \begin{itemize}
-      \item Design  monitoring and controlling system with AVR
-    \end{itemize}
+    \emph{Shahid beheshti university Laser and Plasma Research Institute}
+    \\Design  monitoring and controlling system with AVR
   }
   {C, MATLAB, CodeVisionAVR}
   {}
