--- a/section_projects.tex
+++ b/section_projects.tex
@@ -9,11 +9,13 @@
 	      \end{itemize}
 	\item \textbf{Up/down/cross converter}
 	      \begin{itemize}
-		      \item aaaaaaaaaaaaaaaaaa
+		      \item SD/HD/3G/6G/12G serial digital interface (SDI) up/down/cross converter
+		      \item 16 channel Audio processor
 	      \end{itemize}
-	\item \textbf{Mulit image processor}
+	\item \textbf{SDI Multiviewer}
 	      \begin{itemize}
-		      \item aaaaaaaaaaaaaaaaaa
+		      \item SD/HD/3G SDI Multiviewer with audio/video analyzer 
+		      \item 48 input and 6 3G output
 	      \end{itemize}
 	\item \textbf{Digital Instantaneous Frequency Measurement (DIFM)}
 	      \begin{itemize}
