--- a/section_research_interests.tex
+++ b/section_research_interests.tex
@@ -5,6 +5,7 @@
 	\item Artificial intelligence
 	\item Software defined radio
 	\item Image processing
+	\item Embedded systems
 	      \\
 \end{itemize}
 
