final cv prototype

--- a/CV.tex
+++ b/CV.tex
@@ -30,6 +30,7 @@
 \input{section_headline}
 \input{section_education}
 \input{section_research_experiences}
+\input{section_publications}
 \input{section_research_interests}
 \input{section_experiences}
 \input{section_projects}
