--- a/section_education.tex
+++ b/section_education.tex
@@ -4,7 +4,7 @@
 	\includegraphics[scale=0.12]{graphics/IUST_logo_color} & 
 	\begin{tabular}{rl}
 		\textsc{2015 --2018} & \textbf{Master’s Degree},  Iran University of Science \& Technology,  Tehran, Iran                            \\
-		                     & \textbf{Telecommunications Engineering}                                                                       \\
+		                     & \textbf{Telecommunications System Engineering}                                                                       \\
 		                     & \emph{Supervisor: \link{http://www.iust.ac.ir/content/45110/Dr.-Haddadi}{Assistant Professor Farzan Haddadi}} \\
 		                     & \textsc{GPA}: 15.09/20                                                                                        \\
 	\end{tabular}
