--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -5,30 +5,32 @@
   \experience
   {Present} {FPGA Design Engineer}{Samim group}{Tehran,Iran}
   {Aug 2018} {
-    As product owner (PO), led digital systems team in research and development of an
-    SD/HD/3G/6G/12G serial digital interface (SDI) processor
+    As product owner (PO), lead the digital systems team to research and develop
+    SD/HD/3G/6G/12G serial digital interface (SDI) video/audio processors.
   }
-  {Broadcasting, DSP, MATLAB, C/C++, Vitis, model composer, petalinux, HLS, GitLab}
+  {Broadcasting, DSP, MATLAB, C/C++, Vitis, Model Composer, petalinux, HLS, GitLab}
   {\includegraphics[scale=0.2]{graphics/samim_logo}}
 
   \emptySeparator
 
   \experience
-  {Jun 2018} {Research And Development Specialist}{IUST}{Tehran,Iran}
+  {Jun 2018} {Research Assistant}{IUST}{Tehran,Iran}
   {Mar 2015} {
-    \emph{Iran University of Science and Technology}
-    \\ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+    \emph{Iran University of Science and Technology}\\
+    Design and simulate digital signal processing algorithms with MATLAB as a research 
+    assistant and implement algorithms on Xilinx FPGA. Create the product's central 
+    architecture and roadmap and direct the development process using GitLab tools. 
   }
-  {DSP, MATLAB, ZynqMPSoC, VIVADO, petalinux, GitLab}
+  {DSP, MATLAB, ZynqMPSoC, Vitis, Model Composer, HLS, petalinux, GitLab}
   {\includegraphics[scale=0.12]{graphics/IUST_logo_color}}
 
   \emptySeparator
 
   \experience
-  {Feb 2015} {Research And Development Specialist}{IPM}{Tehran,Iran}
+  {Feb 2015} {Research Engineer}{IPM}{Tehran,Iran}
   {Aug 2012} {
     \emph{Institute for Research in Fundamental Sciences, Brain Engineering Research Center}\\
-    Design and implement digital signal processing algorithms for neuroscience signal detection
+    Design and implement digital signal processing algorithms for neuroscience signal detection.
   }
   {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
   {\includegraphics[scale=0.025]{graphics/IPM_logo}}
@@ -38,8 +40,8 @@
   \experience
   {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
   {May 2013} {
-    \emph{Shahid Beheshti University}
-    \\ Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit
+    \emph{Shahid Beheshti University}\\
+    Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
   }
   {DSP, MATLAB, FPGA}
   {\includegraphics[scale=0.05]{graphics/SBU_logo}}
@@ -49,12 +51,9 @@
   \experience
   {Aug 2012} {Research And Development Assistant}{LPRI}{Tehran,Iran}
   {Jan 2010} {
-    \emph{Shahid beheshti university Laser and Plasma Research Institute}
-    \\Design  monitoring and controlling system with AVR
+    \emph{Shahid beheshti university Laser and Plasma Research Institute}\\
+    Design  monitoring and controlling system with AVR
   }
   {C, MATLAB, CodeVisionAVR}
   {}
-
-  \emptySeparator
-
 \end{experiences}
