--- a/section_skills.tex
+++ b/section_skills.tex
@@ -6,7 +6,7 @@
 	\item \textbf{MATLAB}:
  	\\ \quad Mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing 
 	\item \textbf{Hardware Design Environments}:
- 	\\ \quad VIVADO, Vitis, XILINX model composer, HLS, petalinux
+ 	\\ \quad VIVADO, Vitis, XILINX Model Composer, HLS, petalinux
 	\item \textbf{Other}:
-	\\ \quad Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, docker
+	\\ \quad Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, Docker
 \end{itemize}
