--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -49,7 +49,7 @@
   \emptySeparator
 
   \experience
-  {Aug 2012} {Research And Development Assistant}{LPRI}{Tehran,Iran}
+  {Aug 2012} {Developer}{LPRI}{Tehran,Iran}
   {Jan 2010} {
     \emph{Shahid beheshti university Laser and Plasma Research Institute}\\
     Design  monitoring and controlling system with AVR
