--- a/section_projects.tex
+++ b/section_projects.tex
@@ -1,6 +1,11 @@
 \sectionTitle{Projects}{\faCode}
 
 \begin{itemize}
+	\item \textbf{Digital Double Sideband Frequency Translation for	Transmission of RF MIMO Signals over Fiber}
+	      \begin{itemize}
+		      \item Implementation of DSP cores on ZCU208 (RFSoC)
+		      \item 4 channel ADC/DAC 4 GSPS, Multi-Tile Sync 
+	      \end{itemize}
 	\item \textbf{Real-time spectrum analyzer}
 	      \begin{itemize}
 		      \item 1 GSPS with 12 bit ADC
@@ -10,11 +15,11 @@
 	\item \textbf{Up/down/cross converter}
 	      \begin{itemize}
 		      \item SD/HD/3G/6G/12G serial digital interface (SDI) up/down/cross converter
-		      \item 16 channel Audio processor
+		      \item 16 channel audio processor
 	      \end{itemize}
-	\item \textbf{SDI Multiviewer}
+	\item \textbf{SDI multiviewer}
 	      \begin{itemize}
-		      \item SD/HD/3G SDI Multiviewer with audio/video analyzer 
+		      \item SD/HD/3G SDI multiviewer with audio/video analyzer 
 		      \item 48 input and 6 3G output
 	      \end{itemize}
 	\item \textbf{Digital Instantaneous Frequency Measurement (DIFM)}
@@ -33,6 +38,6 @@
 	\item \textbf{Radar emulator}
 	      \begin{itemize}
 		      \item 1.6 GSPS with 14 bit DAC
-		      \item On-demand programmable PW, PRI and antenna pattern
+		      \item On-demand programmable PW, PRI, and antenna pattern
 	      \end{itemize}
 \end{itemize}
