patch rename project

--- a/section_projects.tex
+++ b/section_projects.tex
@@ -1,7 +1,7 @@
 \sectionTitle{Projects}{\faCode}
 
 \begin{itemize}
-	\item \textbf{Digital Double Sideband Frequency Translation for	Transmission of RF MIMO Signals over Fiber}
+	\item \textbf{Broadband wireless over fiber}
 	      \begin{itemize}
 		      \item Implementation of DSP cores on ZCU208 (RFSoC)
 		      \item 4 channel ADC/DAC 4 GSPS, Multi-Tile Sync 
