remove some section current point: 46

--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -17,9 +17,9 @@
   {Jun 2018} {Research Assistant}{IUST}{Tehran,Iran}
   {Mar 2015} {
     \emph{Iran University of Science and Technology}\\
-    Design and simulate digital signal processing algorithms with MATLAB as a research 
-    assistant and implement algorithms on Xilinx FPGA. Create the product's central 
-    architecture and roadmap and direct the development process using GitLab tools. 
+    Design and simulate digital signal processing algorithms with MATLAB as a research
+    assistant and implement algorithms on Xilinx FPGA. Create the product's central
+    architecture and roadmap and direct the development process using GitLab tools.
   }
   {DSP, MATLAB, ZynqMPSoC, Vitis, Model Composer, HLS, petalinux, GitLab}
   {\includegraphics[scale=0.12]{graphics/IUST_logo_color}}
@@ -38,17 +38,6 @@
   \emptySeparator
 
   \experience
-  {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
-  {May 2013} {
-    \emph{Shahid Beheshti University}\\
-    Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
-  }
-  {DSP, MATLAB, FPGA}
-  {\includegraphics[scale=0.05]{graphics/SBU_logo}}
-
-  \emptySeparator
-
-  \experience
   {Aug 2012} {Developer}{LPRI}{Tehran,Iran}
   {Jan 2010} {
     \emph{Shahid beheshti university Laser and Plasma Research Institute}\\
@@ -56,4 +45,17 @@
   }
   {C, MATLAB, CodeVisionAVR}
   {}
+
+  \emptySeparator
+
+  \experience
+  {} {Engineering Apprentice}{SBU}{Tehran,Iran}
+  {} {
+    \emph{Shahid Beheshti University}\\
+    Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
+  }
+  {DSP, MATLAB, FPGA}
+  {\includegraphics[scale=0.05]{graphics/SBU_logo}}
+
+
 \end{experiences}
