--- a/section_headline.tex
+++ b/section_headline.tex
@@ -3,10 +3,9 @@
 \addtocounter{experience_years}{-2013}
 
 \par{
-    FPGA design and signal processing engineer with \the\value{experience_years}{\small +} years of experience in the communication
-    and broadcast industry. Design and implement the digital signal processing algorithms on FPGA/ZynqMP.
-    Skilled in Algorithms, Simulink, Statistical Signal Processing, and Embedded Systems.
-    Able to deeply analyze and pinpoint system integration bugs. Passionate about learning
-    new technologies and motivated by tackling challenges.
-    \\
+    FPGA Design Engineer with \the\value{experience_years}{\small +} years of experience
+    in the telecommunication industry.
+    Design and simulate digital signal processing algorithms with MATLAB and implement
+    algorithms on FPGA. Create the product's central architecture and roadmap and direct
+    the development process. Able to thoroughly investigate and uncover system integration flaws.
 }
