--- a/section_skills.tex
+++ b/section_skills.tex
@@ -2,11 +2,11 @@
 
 \begin{itemize}
 	\item \textbf{Programming Skills}:
-	\\ MATLAB, C/C++, VHDL, Verilog, SystemVerilog, Qt, \LaTeX,   Git
+	      MATLAB, C/C++, VHDL, Verilog, SystemVerilog, Qt, \LaTeX, Git
 	\item \textbf{MATLAB}:
- 	\\ \quad Mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing 
+	      Mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing
 	\item \textbf{Hardware Design Environments}:
- 	\\ \quad VIVADO, Vitis, XILINX Model Composer, HLS, petalinux
+	      VIVADO, Vitis, XILINX Model Composer, HLS, petalinux
 	\item \textbf{Other}:
-	\\ \quad Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, Docker
+	      Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, Docker
 \end{itemize}
