remove company logo

--- a/awesome-source-cv.cls
+++ b/awesome-source-cv.cls
@@ -311,7 +311,7 @@
 
 % Define the 'experiences' environment
 \newenvironment{experiences}{%
-  \begin{longtable}{cR{\leftcolumn}|E}
+  \begin{longtable}{R{\leftcolumn}|E}
 }{%
   \end{longtable}
 }
@@ -324,13 +324,13 @@
 %                      <Experience description (Could be a list)>
 %                    }
 %                    {<Technology list>}
-\newcommand\experience[8]{
-  \multirow{3}{*}{#8} & \textsc{#1} & \textsc{#2}, #3, #4                                     \\*
-                      & \textsc{#5} & \begin{minipage}[t]{5in}
+\newcommand\experience[7]{
+  \textsc{#1} & \textsc{#2}, #3, #4                                     \\*
+                       \textsc{#5} & \begin{minipage}[t]{6in}
                                         #6
                                       \end{minipage}	\vspace*{0.1cm}                           \\*
 
-                      &             & \begin{minipage}[t]{5in}
+                                   & \begin{minipage}[t]{6in}
                                         \footnotesize{\foreach \n in {#7}{\cvtag{\n}}}
                                       \end{minipage}	\vspace*{0.1cm} \\
 }
