--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -1,28 +1,16 @@
 \sectionTitle{Experiences}{\faBriefcase}
 
 \begin{experiences}
-
-  \experience
-  {Present} {FPGA Design Engineer}{Samim group}{Tehran,Iran}
-  {Aug 2018} {
-    As product owner (PO), lead the digital systems team to research and develop
-    SD/HD/3G/6G/12G serial digital interface (SDI) video/audio processors.
-  }
-  {Broadcasting, DSP, MATLAB, C/C++, Vitis, Model Composer, petalinux, HLS, GitLab}
-  {\includegraphics[scale=0.2]{graphics/samim_logo}}
-
-  \emptySeparator
-
   \experience
   {Jun 2018} {Research Assistant}{IUST}{Tehran,Iran}
   {Mar 2015} {
     \emph{Iran University of Science and Technology}\\
-    Design and simulate digital signal processing algorithms with MATLAB as a research
-    assistant and implement algorithms on Xilinx FPGA. Create the product's central
-    architecture and roadmap and direct the development process using GitLab tools.
+    Design telecommunication algorithms
+    Implementation of DSP techniques such as FFTs, FIRs,
+    IIRs and CICs using VHDL/systemVerilog or system generator.
+    Experienced with high-speed ADC and DAC converters.
   }
   {DSP, MATLAB, ZynqMPSoC, Vitis, Model Composer, HLS, petalinux, GitLab}
-  {\includegraphics[scale=0.12]{graphics/IUST_logo_color}}
 
   \emptySeparator
 
@@ -30,10 +18,21 @@
   {Feb 2015} {Research Engineer}{IPM}{Tehran,Iran}
   {Aug 2012} {
     \emph{Institute for Research in Fundamental Sciences, Brain Engineering Research Center}\\
-    Design and implement digital signal processing algorithms for neuroscience signal detection.
+    Participate in Brain-Machine Interface (BMI) projects which using brain signals of humans
+    and/or non-human primates to control robotic platforms. Develope instruments for brain
+    signal emulation/detection with the collaborations of neuroscientists and psychologists.
   }
   {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
-  {\includegraphics[scale=0.025]{graphics/IPM_logo}}
+
+  \emptySeparator
+
+  \experience
+  {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
+  {May 2013} {
+    \emph{Shahid Beheshti University}\\
+    Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
+  }
+  {DSP, MATLAB, FPGA}
 
   \emptySeparator
 
@@ -44,18 +43,4 @@
     Design  monitoring and controlling system with AVR
   }
   {C, MATLAB, CodeVisionAVR}
-  {}
-
-  \emptySeparator
-
-  \experience
-  {} {Engineering Apprentice}{SBU}{Tehran,Iran}
-  {} {
-    \emph{Shahid Beheshti University}\\
-    Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
-  }
-  {DSP, MATLAB, FPGA}
-  {\includegraphics[scale=0.05]{graphics/SBU_logo}}
-
-
 \end{experiences}
