--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -4,11 +4,12 @@
   \experience
   {Jun 2018} {Research Assistant}{IUST}{Tehran,Iran}
   {Mar 2015} {
-    \emph{Iran University of Science and Technology}\\
-    Design telecommunication algorithms
-    Implementation of DSP techniques such as FFTs, FIRs,
-    IIRs and CICs using VHDL/systemVerilog or system generator.
-    Experienced with high-speed ADC and DAC converters.
+    \emph{Iran University of Science and Technology}
+    \begin{itemize}
+      \item  Design telecommunication algorithms Implementation of DSP techniques such as
+            FFTs, FIRs, IIRs and CICs using VHDL/systemVerilog or system generator.
+      \item Experienced with high-speed ADC and DAC converters.
+    \end{itemize}
   }
   {DSP, MATLAB, ZynqMPSoC, Vitis, Model Composer, HLS, petalinux, GitLab}
 
