--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -2,6 +2,16 @@
 
 \begin{experiences}
   \experience
+  {Present} {FPGA Design Engineer}{SAMIM group}{Tehran,Iran}
+  {Aug 2018} {
+    As product owner (PO), lead the digital systems team to research and develop
+    SD/HD/3G/6G/12G serial digital interface (SDI) video/audio processors.
+  }
+  {Broadcasting, DSP, MATLAB, C/C++, Vitis, Model Composer, petalinux, HLS, GitLab}
+
+  \emptySeparator
+
+  \experience
   {Jun 2018} {Research Assistant}{IUST}{Tehran,Iran}
   {Mar 2015} {
     \emph{Iran University of Science and Technology}
@@ -18,10 +28,13 @@
   \experience
   {Feb 2015} {Research Engineer}{IPM}{Tehran,Iran}
   {Aug 2012} {
-    \emph{Institute for Research in Fundamental Sciences, Brain Engineering Research Center}\\
-    Participate in Brain-Machine Interface (BMI) projects which using brain signals of humans
-    and/or non-human primates to control robotic platforms. Develope instruments for brain
-    signal emulation/detection with the collaborations of neuroscientists and psychologists.
+    \emph{Institute for Research in Fundamental Sciences, Brain Engineering Research Center}
+    \begin{itemize}
+      \item Participate in Brain-Machine Interface (BMI) projects which using brain signals of humans
+            and/or non-human primates to control robotic platforms.
+      \item Develope instruments for brain signal emulation/detection with the
+            collaborations of neuroscientists and psychologists.
+    \end{itemize}
   }
   {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
 
@@ -30,7 +43,6 @@
   \experience
   {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
   {May 2013} {
-    \emph{Shahid Beheshti University}\\
     Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
   }
   {DSP, MATLAB, FPGA}
@@ -40,7 +52,7 @@
   \experience
   {Aug 2012} {Developer}{LPRI}{Tehran,Iran}
   {Jan 2010} {
-    \emph{Shahid beheshti university Laser and Plasma Research Institute}\\
+    \emph{Laser and Plasma Research Institute}\\
     Design  monitoring and controlling system with AVR
   }
   {C, MATLAB, CodeVisionAVR}
