--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -2,26 +2,51 @@
 
 \begin{experiences}
   \experience
-  {Present} {FPGA Design Engineer}{SAMIM group}{Tehran,Iran}
+  {Present} {FPGA Design Engineer, Product Owner}{SAMIM group}{Tehran,Iran}
   {Aug 2018} {
-    As product owner (PO), lead the digital systems team to research and develop
-    SD/HD/3G/6G/12G serial digital interface (SDI) video/audio processors.
+    \begin{itemize}
+
+      \item Created and maintained product roadmap, planned 3-week sprints,
+            and prioritized team's backlog to provide a cohesive vision on
+            project goals aligned with business objectives, improving team
+            performance by $20\%$.
+      \item Participated in developing the company's strategic plan for
+            next-generation 12G-SDI based products.
+      \item Designed, implemented, and tested live production custom cores
+            such as Video Mixing, Format Conversion, Frame Synchronization,
+            and Audio Embedding/De-embedding.
+      \item Implemented internal and board-level peripherals of FPGA, including
+            Gigabit Transceivers (GTX, GTH), DRAM interfaces (DDR4/DDR3),
+            standard protocols (SPI, I2C), Xilinx protocols, and video/audio
+            interfaces (3G-SDI, 12G-SDI, BT1120, HDMI v1.0, AES3).
+      \item Experienced with integrated embedded processors and custom IP cores
+            in SOC FPGA Design.
+    \end{itemize}
   }
-  {Broadcasting, DSP, MATLAB, C/C++, Vitis, Model Composer, petalinux, HLS, GitLab}
+  {Broadcasting, Embedded System, PetaLinux, Agile Development, Gitlab CI/CD}
 
   \emptySeparator
 
   \experience
   {Jun 2018} {Research Assistant}{IUST}{Tehran,Iran}
   {Mar 2015} {
-    \emph{Iran University of Science and Technology}
+    \emph{Iran University of Science and Technology, Signal Processing Lab}
     \begin{itemize}
-      \item  Design telecommunication algorithms Implementation of DSP techniques such as
-            FFTs, FIRs, IIRs and CICs using VHDL/systemVerilog or system generator.
-      \item Experienced with high-speed ADC and DAC converters.
+      \item Research new technologies and create new product development plans.
+      \item Coordinate with other functional teams during the product's life
+            cycle and be responsible for and require design modifications.
+      \item Experience optimizing the design segmentation for a target FPGA
+            and executing timing closure.
+      \item Experienced with high-speed ($4$ GSPS) ADC and DAC converters
+            and Radio Frequency (RF) circuits.
+      \item Design telecommunication algorithms and Implement DSP techniques
+            such as FFTs, FIRs, IIRs, and CICs using VHDL/SystemVerilog
+            or system generator.
+      \item Plan and develop experimental test programs to verify compliance
+            with all applicable regulations and quality guidelines.
     \end{itemize}
   }
-  {DSP, MATLAB, ZynqMPSoC, Vitis, Model Composer, HLS, petalinux, GitLab}
+  {Digital Signal Processing, Algorithms, Telecommunication, Gitlab CI/CD}
 
   \emptySeparator
 
@@ -30,22 +55,25 @@
   {Aug 2012} {
     \emph{Institute for Research in Fundamental Sciences, Brain Engineering Research Center}
     \begin{itemize}
-      \item Participate in Brain-Machine Interface (BMI) projects which using brain signals of humans
-            and/or non-human primates to control robotic platforms.
-      \item Develope instruments for brain signal emulation/detection with the
-            collaborations of neuroscientists and psychologists.
+      \item Participate in Brain-Machine Interface (BMI) projects using brain
+            signals of humans or non-human primates to control robotic platforms.
+      \item Developed instruments for brain signal emulation/detection
+            ($24$ bit ADC/DAC and low noise) with the collaborations of
+            neuroscientists and psychologists.
+      \item Perform design verification tests, analyze results, provide
+            recommendations, and drive implementation.
     \end{itemize}
   }
-  {DSP, MATLAB, FPGA, System Generator, VIVADO, GitLab}
+  {Brain Signal Processing, Neuroscience, MATLAB, VIVADO}
 
   \emptySeparator
 
   \experience
   {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
   {May 2013} {
-    Design and implementation of polyphase 1:8 filter on Spartan-6 FPGA SP605 Evaluation Kit.
+    FPGA implementation of polyphase 1:8 filter on Spartan-6 SP605 Evaluation Kit.
   }
-  {DSP, MATLAB, FPGA}
+  {DSP, MATLAB, FPGA, ISE}
 
   \emptySeparator
 
