--- a/section_projects.tex
+++ b/section_projects.tex
@@ -4,7 +4,7 @@
 	\item \textbf{Broadband wireless over fiber}
 	      \begin{itemize}
 		      \item Implementation of DSP cores on ZCU208 (RFSoC)
-		      \item 4 channel ADC/DAC 4 GSPS, Multi-Tile Sync 
+		      \item 4 channel ADC/DAC 4 GSPS, Multi-Tile Sync
 	      \end{itemize}
 	\item \textbf{Real-time spectrum analyzer}
 	      \begin{itemize}
@@ -19,17 +19,19 @@
 	      \end{itemize}
 	\item \textbf{SDI multiviewer}
 	      \begin{itemize}
-		      \item SD/HD/3G SDI multiviewer with audio/video analyzer 
-		      \item 48 input and 6 3G output
+		      \item SD/HD/3G SDI multiviewer with audio/video analyzer
+		      \item 48 input and 6 outputs
 	      \end{itemize}
 	\item \textbf{Digital Instantaneous Frequency Measurement (DIFM)}
 	      \begin{itemize}
 		      \item 1 GSPS with 12 bit ADC
-		      \item Capture signal frequency from 0 to 500 MHz with a maximum of 0.16 MHz root-mean-squared error in less than 200 ns.
+		      \item Capture signal frequency from 0 to 500 MHz with a maximum of 0.16 MHz
+		            root-mean-squared error in less than 200 ns.
 	      \end{itemize}
 	\item \textbf{Soft sphere MIMO decoder}
 	      \begin{itemize}
-		      \item MATLAB simulation and FPGA implementation of sphere decoding for wide-band MIMO systems
+		      \item MATLAB simulation and FPGA implementation of sphere decoding for wide-band
+		            MIMO systems used in 4G broadband cellular receiver
 	      \end{itemize}
 	\item \textbf{Adaptive digital I/Q imbalances compensator}
 	      \begin{itemize}
