remove some part

--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -16,9 +16,9 @@
             such as Video Mixing, Format Conversion, Frame Synchronization,
             and Audio Embedding/De-embedding.
       \item Implemented internal and board-level peripherals of FPGA, including
-            Gigabit Transceivers (GTX, GTH), DRAM interfaces (DDR4/DDR3),
+            Gigabit Transceivers, DRAM interfaces,
             standard protocols (SPI, I2C), Xilinx protocols, and video/audio
-            interfaces (3G-SDI, 12G-SDI, BT1120, HDMI v1.0, AES3).
+            interfaces (SDI, BT1120, HDMI, AES3).
       \item Experienced with integrated embedded processors and custom IP cores
             in SOC FPGA Design.
     \end{itemize}
@@ -58,7 +58,7 @@
       \item Participate in Brain-Machine Interface (BMI) projects using brain
             signals of humans or non-human primates to control robotic platforms.
       \item Developed instruments for brain signal emulation/detection
-            ($24$ bit ADC/DAC and low noise) with the collaborations of
+            with the collaborations of
             neuroscientists and psychologists.
       \item Perform design verification tests, analyze results, provide
             recommendations, and drive implementation.
@@ -71,17 +71,11 @@
   \experience
   {Oct 2013} {Engineering Apprentice}{SBU}{Tehran,Iran}
   {May 2013} {
-    FPGA implementation of polyphase 1:8 filter on Spartan-6 SP605 Evaluation Kit.
+    \emph{Laser and Plasma Research Institute}
+    \begin{itemize}
+      \item FPGA implementation of polyphase 1:8 filter on Spartan-6 SP605 Evaluation Kit.
+      \item Design monitoring and controlling system with AVR.
+    \end{itemize}
   }
-  {DSP, MATLAB, FPGA, ISE}
-
-  \emptySeparator
-
-  \experience
-  {Aug 2012} {Developer}{LPRI}{Tehran,Iran}
-  {Jan 2010} {
-    \emph{Laser and Plasma Research Institute}\\
-    Design  monitoring and controlling system with AVR
-  }
-  {C, MATLAB, CodeVisionAVR}
+  {DSP, MATLAB, FPGA, ISE, CodeVisionAVR}
 \end{experiences}
