--- a/section_education.tex
+++ b/section_education.tex
@@ -4,7 +4,7 @@
 	\includegraphics[scale=0.12]{graphics/IUST_logo_color} & 
 	\begin{tabular}{rl}
 		\textsc{2015 --2018} & \textbf{Master’s Degree},  Iran University of Science \& Technology,  Tehran, Iran                            \\
-		                     & \textbf{Telecommunications System Engineering}                                                                \\
+		                     & \textbf{Electrical Engineering - Communications - System}                                                     \\
 		                     & Thesis: Adaptive Recovery of Dictionary-sparse Signals using Binary Measurements                              \\
 		                     & \emph{Supervisor: \link{http://www.iust.ac.ir/content/45110/Dr.-Haddadi}{Assistant Professor Farzan Haddadi}} \\
 	\end{tabular}
@@ -12,7 +12,7 @@
 	\includegraphics[scale=0.05]{graphics/SBU_logo}        & 
 	\begin{tabular}{rl}
 		\textsc{2010 --2015} & \textbf{Bachelor's Degree},  Shahid Beheshti University, Tehran, Iran                                  \\
-		                     & \textbf{Telecommunications Engineering}                                                                \\
+		                     & \textbf{Electrical Engineering - Communications}                                                       \\
 		                     & Thesis: Digital Compensation of Imbalances in Quadrature Receivers                                     \\
 		                     & \emph{Supervisor: \link{https://ece.sbu.ac.ir/~f-torkamani}{Associate Professor Farah Torkamani Azar}} \\
 	\end{tabular}
